[workspace]
members = ["programs/*"]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# [lib]
# crate-type = ["cdylib", "lib"]
# name = "solfhe"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
hyperlane-core = "0.1.0"
hyperlane-solana = "0.1.0"
borsh = "0.9.3"
tfhe = "0.2.4"
zama_fhe = "0.1.0"
